--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development next dev",
-    "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "cross-env NODE_ENV=development next dev",
+  "build": "prisma generate && next build",
+  "start": "next start",
+  "lint": "next lint"
+}و
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "next": "^15.3.2",
